--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 scikit-learn==1.4.1.post1
-duckdb
-pandas
-textattack
+duckdb==0.10.0
+pandas==2.2.1
+textattack==0.3.10
 textblob
 pyspellchecker
 torch
